--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
 .item img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+     object-fit: cover; 
 }
 
 .item .text {
@@ -51,7 +51,8 @@
 }
 
 .thumb.active {
-    border: 2px solid #ccc;
+    outline: 5px solid rgb(187, 187, 187);
+    outline-offset: -.3rem;
     opacity: 1;
 }
 
@@ -102,4 +103,7 @@ oppure i caratteri ∧ (&and;) e ∨ (&or;)
     bottom: 35%;
     left: 50%;
     transform: translate(-50%) rotate(135deg);
+}
+h3,p{
+    text-shadow: 2px 2px #000;
 }
