--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container {
@@ -106,4 +107,8 @@ oppure i caratteri ∧ (&and;) e ∨ (&or;)
 }
 h3,p{
     text-shadow: 2px 2px #000;
+}
+h1{
+    text-align: center;
+    margin-bottom:10%;
 }
